[package]
name = "kai_rust_wasm_play"
version = "0.1.0"
authors = ["Kai Salmon <kaisalmon@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.56"
serde_derive = "1.0.114"



[lib]
crate-type = ["cdylib", "rlib"]
